--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
   },
   "devDependencies": {
     "@types/node": "18.11.10",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "postcss-nested": "^6.0.1",
+    "tailwindcss": "^3.2.7",
     "typescript": "^4.9.3"
   }
 }
