Added @splidejs/react-splide for image slider functiont

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["Nextra", "svgr", "tailwindcss"]
+  "cSpell.words": [
+    "eiken",
+    "Nextra",
+    "Splide",
+    "splidejs",
+    "svgr",
+    "tailwindcss"
+  ]
 }
