--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/shuding/nextra-docs-template#readme",
   "dependencies": {
+    "@splidejs/react-splide": "^0.7.12",
     "next": "^13.0.6",
     "next-themes": "^0.2.1",
     "nextra": "latest",
