--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
     "next": "^13.0.6",
+    "next-intl": "^2.12.0",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
     "nextra": "latest",
