--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 .next
 node_modules
+# PWA files
+**/public/sw.js
+**/public/workbox-*.js
+**/public/worker-*.js
+**/public/sw.js.map
+**/public/workbox-*.js.map
+**/public/worker-*.js.map
