--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@svgr/webpack": "^7.0.0",
     "@types/node": "18.11.10",
     "autoprefixer": "^10.4.14",
+    "next-compose-plugins": "^2.2.1",
     "postcss": "^8.4.21",
     "postcss-nested": "^6.0.1",
     "tailwindcss": "^3.2.7",
