Created layouts dir and mdxPageLayout.tsx in it

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
       "@/styles/*": ["./styles/*"],
       "@/data/*": ["./data/*"],
       "@/hooks/*": ["./hooks/*"],
-      "@/types": ["./types/index.ts"]
+      "@/types": ["./types/index.ts"],
+      "@/layouts/*": ["./layouts/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
