--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,7 +6,7 @@
   "start_url": "/",
   "name": "Drift Like Lightning",
   "short_name": "DLL",
-  "description": "This is a website run by Hikari",
+  "description": "This is a website run by bklthwnrkm",
   "icons": [
     {
       "src": "/icon-192x192.png",
