--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/shuding/nextra-docs-template#readme",
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
+    "clsx": "^1.2.1",
     "next": "^13.0.6",
     "next-intl": "^2.12.0",
     "next-pwa": "^5.6.0",
